<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_welcome_page">Welcome to OurStory!</string>
    <string name="message_welcome_page">Here you will be presented with inspirational stories from our friends who have learned and achieved success through Dicoding.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Welcome,\n%1$s!</string>
    <string name="namePost">%1$s</string>
    <string name="logout">Keluar</string>
    <string name="story">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="descEditText">Description</string>
    <string name="desc" />
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
</resources>